# dbintelai

./: .env.example  README.md  ai_models.py  app.py  db_connectors.py  guide.txt  install_deps.txt  main.py  pyproject.toml  requirements.txt  schema.sql  task.txt
DB_connection/: app.py  generate_RDS_schema.py  graphDB.py  overallDB.ipynb  postgres.py  test.ipynb  tree_dig.py
templates/: index.html  welcome.html
